name:                 ModML-Reactions
version:              0.0.1
cabal-version:        >= 1.6
license:              BSD3
build-type:           Simple
copyright:            Andrew Miller
author:               Andrew Miller
maintainer:           Andrew Miller <ak.miller@auckland.ac.nz>
stability:            experimental
synopsis:             A ModML module providing a DSL for processes which behave like reactions
description:          A ModML module providing a DSL for processes which behave like reactions

library
  hs-source-dirs:       .
  exposed-modules:
    ModML.Reactions.Reactions
  build-depends: base ==4.*,
                 mtl >= 1.0 && < 3,
                 syb == 0.1.*,
                 containers == 0.3.*,
                 typehash == 1.*,
                 ModML-Core == 0.0.*,
                 ModML-Units == 0.0.*,
                 template-haskell
